# functional_music_pipeline

./: .clineignore  .coveragerc  .dockerignore  .geminiignore  .gitignore  .npmrc  AGENTS.md  Dockerfile  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  allow_sbx_policies.sh  docker-compose.yml  main.py  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_antigravity.sh  start_cline.sh  start_codex.sh  start_gemini.sh  start_gemini_cli.sh  start_opencode.sh  start_pi.sh  test_dataclass.py
.codex/: config.toml
.gemini/: settings.json
.pi/: mcp.json  settings.json
.serena/: project.local.yml
audio_rendering/: wav_writer.py
cli/: __init__.py  render_command.py
composition/: loader.py  parser.py  profile_factory.py  schema.py  score_plan.py  transform_params_validation.py  transformation.py  transformer.py
compositions/: basic_batch_transforms_demo.json  basic_transforms_demo.json  complexity_transforms_demo.json  composition_example.json  drift_demo.json  emergent_pipeline_demo.json  emergent_pipeline_frost_bloom_demo.json  emergent_pipeline_frost_internal_demo.json  fragment_dimension_comparison_demo.json  fragment_multidimensional_demo.json  frost_cluster_demo.json  frost_effect_demo.json  frost_per_tone_reference_demo.json  frost_per_tone_sustained_demo.json  frost_per_tone_unsustained_demo.json  frost_single_seed_probe_demo.json  fugue_stretto_golden_ratio_demo.json  fugue_subject_answer_demo.json  geological_example.json  golden_ratio_demo.json  golden_ratio_phrase_relative_grow.json  golden_ratio_phrase_relative_shrink.json  (+25 more)
(+216 files in other folders)
