[project]
name = "aider-experiment"
version = "0.0.0"
requires-python = ">=3.13"

[tool.ruff]
line-length = 170
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[tool.vulture]
ignore_decorators = ["@property"]
min_confidence = 60

[dependency-groups]
dev = [
    "radon>=6.0.1",
    "pyan3>=1.2.0",
    "pydeps>=3.0.0",
]